feat: se corrigieron errores, para el correcto funcionamiento del controlador, estos fueron: agregacion de la libreria time_bogota, en el modelo que se pudiera poner null en activo y las fechas y en los swaggers se modifico a v2 para poder hacer las pruebas udistrital/core_documentacion#21
